implemented film id site query

--- a/src/main/webapp/newFilmForm.html
+++ b/src/main/webapp/newFilmForm.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h3>Enter The Following Film Fields</h3>
-	<form action="GetStateData.do" method="GET">
+	<form action="FilmEntry.do" method="POST">
 		Title:
 		<input type="text" name="title" /> 
 		<br>
