implemented film creation method

--- a/src/main/webapp/newFilmForm.html
+++ b/src/main/webapp/newFilmForm.html
@@ -11,16 +11,31 @@
 		<input type="text" name="title" /> 
 		<br>
 		<label for="description">Description:</label><br>
-		<textarea id="description" name="description" rows="4" cols="50"></textarea>
+		<textarea id="description" name="desc" rows="4" cols="50"></textarea>
 		<br>
 		Release Year:
-		<input type="text" name="releaseyear" /> 
+		<input type="text" name="releaseYear" /> 
+		<br>
+		Language Id:
+		<input type="text" name="langId" /> 
+		<br>
+		Rental Duration:
+		<input type="text" name="rentDur" /> 
+		<br>
+		Rental Rate:
+		<input type="text" name="rate" /> 
 		<br>
 		Film Length:
-		<input type="text" name="filmlength" /> 
+		<input type="text" name="length" /> 
+		<br>
+		Replacement Cost:
+		<input type="text" name="repCost" /> 
 		<br>
 		Rating:
 		<input type="text" name="rating" /> 
+		<br>
+		Special Features:
+		<input type="text" name="features" /> 
 		<br>
 		<input type="submit" value="Submit Film" />
 	</form>
