All tasks complete with a couple alibis

--- a/src/main/webapp/filmIDForm.html
+++ b/src/main/webapp/filmIDForm.html
@@ -7,9 +7,10 @@
 <body>
   <h3>Find Film By ID</h3>
   <form action="GetFilmById.do" method="GET">
-    Enter ID:
+    Enter ID:<br>
     <input type="text" name="filmid"/> 
     <input type="submit" value="Get Film" />
   </form>
+  	<a href="index.html">Cancel</a><br>
 </body>
 </html>
