--- a/src/main/webapp/keywordSearchForm.html
+++ b/src/main/webapp/keywordSearchForm.html
@@ -7,10 +7,10 @@
   <body>
   	<h3>Search Film By Keyword</h3>
     <form action="keyword.do" method="GET">
-      <label for="keyword">Keyword:</label>
+      <label for="keyword">Keyword:</label><br>
       <input type="text" name="keyword"/>
-      <br>
       <input type="submit" value="Get Film">
     </form>
+    	<a href="index.html">Cancel</a><br>
   </body>
 </html>
