--- a/src/main/webapp/newFilmForm.html
+++ b/src/main/webapp/newFilmForm.html
@@ -13,7 +13,7 @@
 		<textarea id="description" name="desc" rows="4" cols="50"></textarea>
 		<br> 
 		Release Year: 
-		<input type="text" name="releaseYear" /> <br>
+		<input type="number" name="releaseYear" value="${update.releaseYear}" min="1850" max="2025"/><br> 
 		<label>Language Id:</label> 
 		<select name="langId">
 			<option value=1>English</option>
@@ -23,13 +23,12 @@
 			<option value=5>French</option>
 			<option value=6>German</option>
 		</select> <br> 
-		Rental Duration: <input type="text" name="rentDur" /> 
-		<br>
+		Rental Duration: <input type="number" name="rentDur" min="3" max="14"/> <br>
 		Rental Rate: 
-		<input type="text" name="rate" /> <br> 
+		<input type="number" name="rate" placeholder="1.99" step="0.01" min="4" max="20"/> <br> 
 		Film Length:
-		<input type="text" name="length" /> <br> 
-		Replacement Cost: <input type="text" name="repCost" /> <br> 
+		<input type="number" name="length" /> <br> 
+		Replacement Cost: <input type="number" name="repCost" placeholder="9.99"step="0.01" min="0" max="100" /> <br> 
 			
 		<label>Rating:</label> 
 			<select name="rating">
@@ -50,6 +49,8 @@
 		 <label for="Behind the Scenes">Behind the Scenes</label><br> <br> 
 		 <input type="submit" value="Submit Film" />
 	</form>
-
+	<br>
+		<a href="index.html">Cancel</a><br>
+	
 </body>
 </html>
